--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -30,8 +30,8 @@
    <widget class="QPushButton" name="begin_tracing">
     <property name="geometry">
      <rect>
-      <x>940</x>
-      <y>10</y>
+      <x>820</x>
+      <y>50</y>
       <width>91</width>
       <height>32</height>
      </rect>
@@ -40,11 +40,69 @@
      <string>tracing</string>
     </property>
    </widget>
+   <widget class="QPushButton" name="begin_simplify">
+    <property name="geometry">
+     <rect>
+      <x>930</x>
+      <y>50</y>
+      <width>91</width>
+      <height>32</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>simplifying</string>
+    </property>
+   </widget>
+   <widget class="QCheckBox" name="interpolation">
+    <property name="geometry">
+     <rect>
+      <x>830</x>
+      <y>100</y>
+      <width>181</width>
+      <height>20</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>interpolation</string>
+    </property>
+    <property name="checked">
+     <bool>true</bool>
+    </property>
+   </widget>
+   <widget class="QCheckBox" name="kd_tree">
+    <property name="geometry">
+     <rect>
+      <x>830</x>
+      <y>130</y>
+      <width>87</width>
+      <height>20</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>kd tree</string>
+    </property>
+    <property name="checked">
+     <bool>true</bool>
+    </property>
+   </widget>
+   <widget class="Line" name="line">
+    <property name="geometry">
+     <rect>
+      <x>827</x>
+      <y>80</y>
+      <width>191</width>
+      <height>20</height>
+     </rect>
+    </property>
+    <property name="orientation">
+     <enum>Qt::Horizontal</enum>
+    </property>
+   </widget>
    <widget class="QLabel" name="label">
     <property name="geometry">
      <rect>
-      <x>820</x>
-      <y>260</y>
+      <x>830</x>
+      <y>370</y>
       <width>171</width>
       <height>16</height>
      </rect>
@@ -56,8 +114,8 @@
    <widget class="QLabel" name="label_3">
     <property name="geometry">
      <rect>
-      <x>820</x>
-      <y>60</y>
+      <x>830</x>
+      <y>170</y>
       <width>62</width>
       <height>16</height>
      </rect>
@@ -66,11 +124,37 @@
      <string>dist</string>
     </property>
    </widget>
+   <widget class="QLabel" name="label_5">
+    <property name="geometry">
+     <rect>
+      <x>830</x>
+      <y>240</y>
+      <width>111</width>
+      <height>16</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>angle X-Y</string>
+    </property>
+   </widget>
+   <widget class="Line" name="line_2">
+    <property name="geometry">
+     <rect>
+      <x>830</x>
+      <y>150</y>
+      <width>191</width>
+      <height>20</height>
+     </rect>
+    </property>
+    <property name="orientation">
+     <enum>Qt::Horizontal</enum>
+    </property>
+   </widget>
    <widget class="Line" name="line_3">
     <property name="geometry">
      <rect>
-      <x>820</x>
-      <y>240</y>
+      <x>830</x>
+      <y>350</y>
       <width>191</width>
       <height>20</height>
      </rect>
@@ -82,8 +166,8 @@
    <widget class="QPlainTextEdit" name="lights">
     <property name="geometry">
      <rect>
-      <x>820</x>
-      <y>310</y>
+      <x>830</x>
+      <y>420</y>
       <width>181</width>
       <height>72</height>
      </rect>
@@ -102,8 +186,8 @@
    <widget class="QLabel" name="label_6">
     <property name="geometry">
      <rect>
-      <x>820</x>
-      <y>290</y>
+      <x>830</x>
+      <y>400</y>
       <width>171</width>
       <height>16</height>
      </rect>
@@ -115,8 +199,8 @@
    <widget class="QSlider" name="dist">
     <property name="geometry">
      <rect>
-      <x>820</x>
-      <y>90</y>
+      <x>830</x>
+      <y>200</y>
       <width>181</width>
       <height>22</height>
      </rect>
@@ -134,6 +218,51 @@
      <enum>Qt::Horizontal</enum>
     </property>
    </widget>
+   <widget class="QDial" name="angle_xy">
+    <property name="geometry">
+     <rect>
+      <x>820</x>
+      <y>270</y>
+      <width>91</width>
+      <height>81</height>
+     </rect>
+    </property>
+    <property name="maximum">
+     <number>359</number>
+    </property>
+    <property name="value">
+     <number>0</number>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_7">
+    <property name="geometry">
+     <rect>
+      <x>960</x>
+      <y>240</y>
+      <width>111</width>
+      <height>16</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>angle Z</string>
+    </property>
+   </widget>
+   <widget class="QDial" name="angle_z">
+    <property name="geometry">
+     <rect>
+      <x>930</x>
+      <y>270</y>
+      <width>91</width>
+      <height>81</height>
+     </rect>
+    </property>
+    <property name="maximum">
+     <number>359</number>
+    </property>
+    <property name="value">
+     <number>0</number>
+    </property>
+   </widget>
    <widget class="QPushButton" name="open">
     <property name="geometry">
      <rect>
@@ -147,6 +276,19 @@
      <string>open</string>
     </property>
    </widget>
+   <widget class="QPushButton" name="save">
+    <property name="geometry">
+     <rect>
+      <x>930</x>
+      <y>10</y>
+      <width>91</width>
+      <height>32</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>save</string>
+    </property>
+   </widget>
    <widget class="QPushButton" name="quit_it">
     <property name="geometry">
      <rect>
@@ -158,6 +300,84 @@
     </property>
     <property name="text">
      <string>quit</string>
+    </property>
+   </widget>
+   <widget class="Line" name="line_4">
+    <property name="geometry">
+     <rect>
+      <x>830</x>
+      <y>500</y>
+      <width>191</width>
+      <height>20</height>
+     </rect>
+    </property>
+    <property name="orientation">
+     <enum>Qt::Horizontal</enum>
+    </property>
+   </widget>
+   <widget class="QLineEdit" name="target_rate">
+    <property name="geometry">
+     <rect>
+      <x>920</x>
+      <y>530</y>
+      <width>71</width>
+      <height>21</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>100.0</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_2">
+    <property name="geometry">
+     <rect>
+      <x>830</x>
+      <y>530</y>
+      <width>91</width>
+      <height>16</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>simplify rate</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_4">
+    <property name="geometry">
+     <rect>
+      <x>1000</x>
+      <y>530</y>
+      <width>16</width>
+      <height>16</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>%</string>
+    </property>
+   </widget>
+   <widget class="Line" name="line_5">
+    <property name="geometry">
+     <rect>
+      <x>830</x>
+      <y>560</y>
+      <width>191</width>
+      <height>20</height>
+     </rect>
+    </property>
+    <property name="orientation">
+     <enum>Qt::Horizontal</enum>
+    </property>
+   </widget>
+   <widget class="Line" name="line_6">
+    <property name="geometry">
+     <rect>
+      <x>1030</x>
+      <y>10</y>
+      <width>16</width>
+      <height>701</height>
+     </rect>
+    </property>
+    <property name="orientation">
+     <enum>Qt::Vertical</enum>
     </property>
    </widget>
    <widget class="QPushButton" name="sxy">
@@ -238,6 +458,114 @@
      <string>flip z</string>
     </property>
    </widget>
+   <widget class="QPushButton" name="fill">
+    <property name="geometry">
+     <rect>
+      <x>1050</x>
+      <y>280</y>
+      <width>114</width>
+      <height>32</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>flood fill</string>
+    </property>
+   </widget>
+   <widget class="Line" name="line_7">
+    <property name="geometry">
+     <rect>
+      <x>1050</x>
+      <y>260</y>
+      <width>118</width>
+      <height>3</height>
+     </rect>
+    </property>
+    <property name="orientation">
+     <enum>Qt::Horizontal</enum>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="antia">
+    <property name="geometry">
+     <rect>
+      <x>1050</x>
+      <y>320</y>
+      <width>114</width>
+      <height>32</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>blurred</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="mosaic">
+    <property name="geometry">
+     <rect>
+      <x>1050</x>
+      <y>360</y>
+      <width>114</width>
+      <height>32</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Mosaic</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_8">
+    <property name="geometry">
+     <rect>
+      <x>1050</x>
+      <y>710</y>
+      <width>121</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>written by qipeng</string>
+    </property>
+   </widget>
+   <widget class="Line" name="line_8">
+    <property name="geometry">
+     <rect>
+      <x>1050</x>
+      <y>410</y>
+      <width>118</width>
+      <height>3</height>
+     </rect>
+    </property>
+    <property name="orientation">
+     <enum>Qt::Horizontal</enum>
+    </property>
+   </widget>
+   <widget class="QComboBox" name="texture">
+    <property name="geometry">
+     <rect>
+      <x>1050</x>
+      <y>430</y>
+      <width>111</width>
+      <height>26</height>
+     </rect>
+    </property>
+    <item>
+     <property name="text">
+      <string>Ceramics</string>
+     </property>
+    </item>
+    <item>
+     <property name="text">
+      <string>Silver</string>
+     </property>
+    </item>
+    <item>
+     <property name="text">
+      <string>Mirror</string>
+     </property>
+    </item>
+    <item>
+     <property name="text">
+      <string>Glass</string>
+     </property>
+    </item>
+   </widget>
   </widget>
   <widget class="QMenuBar" name="menuBar">
    <property name="geometry">
@@ -245,7 +573,7 @@
      <x>0</x>
      <y>0</y>
      <width>1174</width>
-     <height>25</height>
+     <height>22</height>
     </rect>
    </property>
   </widget>
