--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1174</width>
+    <width>1071</width>
     <height>800</height>
    </rect>
   </property>
@@ -27,7 +27,7 @@
      <bool>false</bool>
     </property>
    </widget>
-   <widget class="QPushButton" name="begin_tracing">
+   <widget class="QPushButton" name="trace">
     <property name="geometry">
      <rect>
       <x>820</x>
@@ -40,7 +40,7 @@
      <string>tracing</string>
     </property>
    </widget>
-   <widget class="QPushButton" name="begin_simplify">
+   <widget class="QPushButton" name="simplify">
     <property name="geometry">
      <rect>
       <x>930</x>
@@ -82,169 +82,17 @@
      <enum>Qt::Horizontal</enum>
     </property>
    </widget>
-   <widget class="QLabel" name="label">
-    <property name="geometry">
-     <rect>
-      <x>830</x>
-      <y>370</y>
-      <width>171</width>
-      <height>16</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>ambient_light (20, 20, 20)</string>
-    </property>
-   </widget>
-   <widget class="QLabel" name="label_3">
-    <property name="geometry">
-     <rect>
-      <x>830</x>
-      <y>170</y>
-      <width>101</width>
-      <height>16</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>distance to obj</string>
-    </property>
-   </widget>
-   <widget class="QLabel" name="label_5">
-    <property name="geometry">
-     <rect>
-      <x>840</x>
-      <y>240</y>
-      <width>111</width>
-      <height>16</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>orbit</string>
-    </property>
-   </widget>
-   <widget class="Line" name="line_2">
-    <property name="geometry">
-     <rect>
-      <x>830</x>
-      <y>150</y>
-      <width>191</width>
-      <height>20</height>
-     </rect>
-    </property>
-    <property name="orientation">
-     <enum>Qt::Horizontal</enum>
-    </property>
-   </widget>
    <widget class="Line" name="line_3">
     <property name="geometry">
      <rect>
       <x>830</x>
-      <y>350</y>
+      <y>250</y>
       <width>191</width>
       <height>20</height>
      </rect>
     </property>
     <property name="orientation">
      <enum>Qt::Horizontal</enum>
-    </property>
-   </widget>
-   <widget class="QPlainTextEdit" name="lights">
-    <property name="geometry">
-     <rect>
-      <x>830</x>
-      <y>420</y>
-      <width>181</width>
-      <height>72</height>
-     </rect>
-    </property>
-    <property name="plainText">
-     <string>-1000 3000 1000
-150 150 150
-1000 3000 1000
-150 150 150
-0 0 -1200
-150 150 150
-0 -3000 -1000
-150 150 150</string>
-    </property>
-   </widget>
-   <widget class="QLabel" name="label_6">
-    <property name="geometry">
-     <rect>
-      <x>830</x>
-      <y>400</y>
-      <width>171</width>
-      <height>16</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>lights : (x, y, z, r, g, b)</string>
-    </property>
-   </widget>
-   <widget class="QSlider" name="dist">
-    <property name="geometry">
-     <rect>
-      <x>830</x>
-      <y>200</y>
-      <width>181</width>
-      <height>22</height>
-     </rect>
-    </property>
-    <property name="minimum">
-     <number>1</number>
-    </property>
-    <property name="maximum">
-     <number>100</number>
-    </property>
-    <property name="value">
-     <number>35</number>
-    </property>
-    <property name="orientation">
-     <enum>Qt::Horizontal</enum>
-    </property>
-   </widget>
-   <widget class="QDial" name="orbit">
-    <property name="geometry">
-     <rect>
-      <x>820</x>
-      <y>270</y>
-      <width>91</width>
-      <height>81</height>
-     </rect>
-    </property>
-    <property name="maximum">
-     <number>359</number>
-    </property>
-    <property name="value">
-     <number>0</number>
-    </property>
-   </widget>
-   <widget class="QLabel" name="label_7">
-    <property name="geometry">
-     <rect>
-      <x>950</x>
-      <y>240</y>
-      <width>61</width>
-      <height>16</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>rotate</string>
-    </property>
-   </widget>
-   <widget class="QDial" name="rotate">
-    <property name="geometry">
-     <rect>
-      <x>930</x>
-      <y>270</y>
-      <width>91</width>
-      <height>81</height>
-     </rect>
-    </property>
-    <property name="maximum">
-     <number>359</number>
-    </property>
-    <property name="value">
-     <number>0</number>
     </property>
    </widget>
    <widget class="QPushButton" name="open">
@@ -273,30 +121,17 @@
      <string>save</string>
     </property>
    </widget>
-   <widget class="QPushButton" name="quit_it">
+   <widget class="QPushButton" name="quit">
     <property name="geometry">
      <rect>
-      <x>1060</x>
-      <y>680</y>
+      <x>930</x>
+      <y>670</y>
       <width>91</width>
       <height>32</height>
      </rect>
     </property>
     <property name="text">
      <string>quit</string>
-    </property>
-   </widget>
-   <widget class="Line" name="line_4">
-    <property name="geometry">
-     <rect>
-      <x>830</x>
-      <y>500</y>
-      <width>191</width>
-      <height>20</height>
-     </rect>
-    </property>
-    <property name="orientation">
-     <enum>Qt::Horizontal</enum>
     </property>
    </widget>
    <widget class="QLineEdit" name="target_rate">
@@ -351,204 +186,161 @@
      <enum>Qt::Horizontal</enum>
     </property>
    </widget>
-   <widget class="Line" name="line_6">
+   <widget class="QPushButton" name="shift_up">
     <property name="geometry">
      <rect>
-      <x>1030</x>
-      <y>10</y>
-      <width>16</width>
-      <height>701</height>
-     </rect>
-    </property>
-    <property name="orientation">
-     <enum>Qt::Vertical</enum>
-    </property>
-   </widget>
-   <widget class="QPushButton" name="pushButton">
-    <property name="geometry">
-     <rect>
-      <x>1050</x>
-      <y>10</y>
-      <width>114</width>
-      <height>32</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>swap x y</string>
-    </property>
-   </widget>
-   <widget class="QPushButton" name="syz">
-    <property name="geometry">
-     <rect>
-      <x>1050</x>
-      <y>50</y>
-      <width>114</width>
-      <height>32</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>swap y z</string>
-    </property>
-   </widget>
-   <widget class="QPushButton" name="sxz">
-    <property name="geometry">
-     <rect>
-      <x>1050</x>
-      <y>90</y>
-      <width>114</width>
-      <height>32</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>swap x z</string>
-    </property>
-   </widget>
-   <widget class="QPushButton" name="fx">
-    <property name="geometry">
-     <rect>
-      <x>1050</x>
+      <x>880</x>
       <y>130</y>
-      <width>114</width>
-      <height>32</height>
+      <width>88</width>
+      <height>27</height>
      </rect>
     </property>
     <property name="text">
-     <string>flip x</string>
+     <string>shift up</string>
     </property>
    </widget>
-   <widget class="QPushButton" name="fy">
+   <widget class="QPushButton" name="shift_left">
     <property name="geometry">
      <rect>
-      <x>1050</x>
+      <x>830</x>
       <y>170</y>
-      <width>114</width>
-      <height>32</height>
+      <width>88</width>
+      <height>27</height>
      </rect>
     </property>
     <property name="text">
-     <string>flip y</string>
+     <string>shift left</string>
     </property>
    </widget>
-   <widget class="QPushButton" name="fz">
+   <widget class="QPushButton" name="shift_right">
     <property name="geometry">
      <rect>
-      <x>1050</x>
+      <x>930</x>
+      <y>170</y>
+      <width>88</width>
+      <height>27</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>shift right</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="shift_down">
+    <property name="geometry">
+     <rect>
+      <x>880</x>
       <y>210</y>
-      <width>114</width>
-      <height>32</height>
+      <width>88</width>
+      <height>27</height>
      </rect>
     </property>
     <property name="text">
-     <string>flip z</string>
+     <string>shift down</string>
     </property>
    </widget>
-   <widget class="QPushButton" name="fill">
+   <widget class="QPushButton" name="rotate_left">
     <property name="geometry">
      <rect>
-      <x>1050</x>
+      <x>830</x>
       <y>280</y>
-      <width>114</width>
-      <height>32</height>
+      <width>88</width>
+      <height>27</height>
      </rect>
     </property>
     <property name="text">
-     <string>flood fill</string>
+     <string>rotate left</string>
     </property>
    </widget>
-   <widget class="Line" name="line_7">
+   <widget class="QPushButton" name="rotate_right">
     <property name="geometry">
      <rect>
-      <x>1050</x>
-      <y>260</y>
-      <width>118</width>
-      <height>3</height>
+      <x>940</x>
+      <y>280</y>
+      <width>88</width>
+      <height>27</height>
      </rect>
     </property>
-    <property name="orientation">
-     <enum>Qt::Horizontal</enum>
+    <property name="text">
+     <string>rotate right</string>
     </property>
    </widget>
-   <widget class="QPushButton" name="antia">
+   <widget class="QPushButton" name="orbit_left">
     <property name="geometry">
      <rect>
-      <x>1050</x>
+      <x>830</x>
       <y>320</y>
-      <width>114</width>
-      <height>32</height>
+      <width>88</width>
+      <height>27</height>
      </rect>
     </property>
     <property name="text">
-     <string>blurred</string>
+     <string>orbit left</string>
     </property>
    </widget>
-   <widget class="QPushButton" name="mosaic">
+   <widget class="QPushButton" name="orbit_right">
     <property name="geometry">
      <rect>
-      <x>1050</x>
+      <x>940</x>
+      <y>320</y>
+      <width>88</width>
+      <height>27</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>orbit right</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="twist_left">
+    <property name="geometry">
+     <rect>
+      <x>830</x>
       <y>360</y>
-      <width>114</width>
-      <height>32</height>
+      <width>88</width>
+      <height>27</height>
      </rect>
     </property>
     <property name="text">
-     <string>Mosaic</string>
+     <string>twist clkwise</string>
     </property>
    </widget>
-   <widget class="QLabel" name="label_8">
+   <widget class="QPushButton" name="twist_right">
     <property name="geometry">
      <rect>
-      <x>1050</x>
-      <y>710</y>
-      <width>121</width>
-      <height>31</height>
+      <x>930</x>
+      <y>360</y>
+      <width>131</width>
+      <height>27</height>
      </rect>
     </property>
     <property name="text">
-     <string>written by qipeng</string>
+     <string>twist counterclkwise</string>
     </property>
    </widget>
-   <widget class="Line" name="line_8">
+   <widget class="QPushButton" name="zoom_in">
     <property name="geometry">
      <rect>
-      <x>1050</x>
-      <y>410</y>
-      <width>118</width>
-      <height>3</height>
+      <x>830</x>
+      <y>400</y>
+      <width>88</width>
+      <height>27</height>
      </rect>
     </property>
-    <property name="orientation">
-     <enum>Qt::Horizontal</enum>
+    <property name="text">
+     <string>zoom in</string>
     </property>
    </widget>
-   <widget class="QComboBox" name="texture">
+   <widget class="QPushButton" name="zoom_out">
     <property name="geometry">
      <rect>
-      <x>1050</x>
-      <y>430</y>
-      <width>111</width>
-      <height>26</height>
+      <x>940</x>
+      <y>400</y>
+      <width>88</width>
+      <height>27</height>
      </rect>
     </property>
-    <item>
-     <property name="text">
-      <string>Ceramics</string>
-     </property>
-    </item>
-    <item>
-     <property name="text">
-      <string>Silver</string>
-     </property>
-    </item>
-    <item>
-     <property name="text">
-      <string>Mirror</string>
-     </property>
-    </item>
-    <item>
-     <property name="text">
-      <string>Glass</string>
-     </property>
-    </item>
+    <property name="text">
+     <string>zoom out</string>
+    </property>
    </widget>
   </widget>
   <widget class="QMenuBar" name="menuBar">
@@ -556,7 +348,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>1174</width>
+     <width>1071</width>
      <height>25</height>
     </rect>
    </property>
