--- a/src/gui/window.ui
+++ b/src/gui/window.ui
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Q3DViewer</string>
+   <string>ObjViewer</string>
   </property>
   <widget class="QWidget" name="centralWidget">
    <widget class="QGraphicsView" name="pic">
